--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.class
 out/
 .idea/
+/src/com/startjava/lesson_2_3/calculator/options
+/src/com/startjava/lesson_2_3/calculator/optionsj
+/src/com/startjava/lesson_2_3/calculator/classes
