--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.class
 out/
 .idea/
-/src/com/startjava/lesson_2_3/calculator/options
-/src/com/startjava/lesson_2_3/calculator/optionsj
-/src/com/startjava/lesson_2_3/calculator/classes
+/src/com/startjava/lesson_2_3_4/calculator/options
+/src/com/startjava/lesson_2_3_4/calculator/optionsj
+/src/com/startjava/lesson_2_3_4/calculator/classes
+/startjava.iml
