--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ out/
 /src/com/startjava/lesson_2_3_4/calculator/options
 /src/com/startjava/lesson_2_3_4/calculator/optionsj
 /src/com/startjava/lesson_2_3_4/calculator/classes
-startjava.iml
+startJava.iml
